--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,6 +48,133 @@
 					"-output-directory=PDF", // to change the output directory
 					"%DOC%"
 				],
+				"latex-workshop.latex.tools": [
+					{
+						"name": "lualatexmk",
+						"command": "latexmk",
+						"args": [
+							"-synctex=1",
+							"-interaction=nonstopmode",
+							"-file-line-error",
+							"-halt-on-error",
+							"-lualatex",
+							"-outdir=%OUTDIR%",
+							"%DOC%"
+						],
+						"env": {}
+					},
+					{
+						"name": "latexmk",
+						"command": "latexmk",
+						"args": [
+							"-synctex=1",
+							"-interaction=nonstopmode",
+							"-file-line-error",
+							"-pdf",
+							"-outdir=%OUTDIR%",
+							"%DOC%"
+						],
+						"env": {}
+					},
+					{
+						"name": "xelatexmk",
+						"command": "latexmk",
+						"args": [
+							"-synctex=1",
+							"-interaction=nonstopmode",
+							"-file-line-error",
+							"-xelatex",
+							"-outdir=%OUTDIR%",
+							"%DOC%"
+						],
+						"env": {}
+					},
+					{
+						"name": "latexmk_rconly",
+						"command": "latexmk",
+						"args": [
+							"%DOC%"
+						],
+						"env": {}
+					},
+					{
+						"name": "pdflatex",
+						"command": "pdflatex",
+						"args": [
+							"-synctex=1",
+							"-interaction=nonstopmode",
+							"-file-line-error",
+							"-halt-on-error",
+							"%DOC%"
+						],
+						"env": {}
+					},
+					{
+						"name": "bibtex",
+						"command": "bibtex",
+						"args": [
+							"%DOCFILE%"
+						],
+						"env": {}
+					},
+					{
+						"name": "rnw2tex",
+						"command": "Rscript",
+						"args": [
+							"-e",
+							"knitr::opts_knit$set(concordance = TRUE); knitr::knit('%DOCFILE_EXT%')"
+						],
+						"env": {}
+					},
+					{
+						"name": "jnw2tex",
+						"command": "julia",
+						"args": [
+							"-e",
+							"using Weave; weave(\"%DOC_EXT%\", doctype=\"tex\")"
+						],
+						"env": {}
+					},
+					{
+						"name": "jnw2texminted",
+						"command": "julia",
+						"args": [
+							"-e",
+							"using Weave; weave(\"%DOC_EXT%\", doctype=\"texminted\")"
+						],
+						"env": {}
+					},
+					{
+						"name": "pnw2tex",
+						"command": "pweave",
+						"args": [
+							"-f",
+							"tex",
+							"%DOC_EXT%"
+						],
+						"env": {}
+					},
+					{
+						"name": "pnw2texminted",
+						"command": "pweave",
+						"args": [
+							"-f",
+							"texminted",
+							"%DOC_EXT%"
+						],
+						"env": {}
+					},
+					{
+						"name": "tectonic",
+						"command": "tectonic",
+						"args": [
+							"--synctex",
+							"--keep-logs",
+							"%DOC%.tex"
+						],
+						"env": {}
+					}
+				],
 				// Remove / comment the next 3 lines to remove dark view for pdf
 				"latex-workshop.view.pdf.color.dark.pageColorsBackground": "#171717", // For Dark Viewwer
 				"latex-workshop.latex.autoBuild.run": "never",
